--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "steamaccountswitcher",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "app/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "homepage": "https://github.com/Gantzyo/SteamAccountSwitcher#readme",
   "devDependencies": {
     "electron": "^1.7.11"
+  },
+  "dependencies": {
+    "regedit": "^2.2.7"
   }
 }
