--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "steamaccountswitcher",
   "version": "0.0.1",
-  "description": "",
-  "main": "app/main.js",
+  "description": "A simple GUI to swtich between your steam accounts",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -21,6 +21,13 @@
     "electron": "^1.7.11"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-brands": "^5.0.6",
+    "@fortawesome/fontawesome-free-regular": "^5.0.6",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.12.9",
     "regedit": "^2.2.7"
   }
 }
