--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "steamaccountswitcher",
   "version": "0.0.1",
   "description": "A simple GUI to swtich between your steam accounts",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
@@ -22,12 +22,16 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.3",
-    "@fortawesome/fontawesome-free-brands": "^5.0.6",
-    "@fortawesome/fontawesome-free-regular": "^5.0.6",
     "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
     "regedit": "^2.2.7"
+  },
+  "build": {
+    "output": "dist",
+    "win": {
+      "asar": "true"
+    }
   }
 }
