- Regedit module cchanged to rage-edit - Added bootstrap-darkly theme - Steam process is monitored now - Added some comments - Added a new layour for accounts list

--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "src/main/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "package-win": "electron-packager . steamaccountswitcher --overwrite --asar --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\"",
+    "default-package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
+    "default-package-win": "electron-packager . steamaccountswitcher --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\"",
+    "default-package-linux": "electron-packager . steamaccountswitcher --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,6 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.12.9",
-    "regedit": "^2.2.7"
+    "rage-edit": "^1.0.2"
   }
 }
