--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "steamaccountswitcher",
   "version": "0.0.1",
   "description": "A simple GUI to swtich between your steam accounts",
-  "main": "src/main/index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "package-win": "electron-packager . steamaccountswitcher --overwrite --asar --platform=win32 --arch=ia32 --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\"",
-    "default-package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/icons/mac/icon.icns --prune=true --out=release-builds",
-    "default-package-win": "electron-packager . steamaccountswitcher --overwrite --asar --platform=win32 --arch=ia32 --icon=assets/icons/win/icon.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\"",
-    "default-package-linux": "electron-packager . steamaccountswitcher --overwrite --asar --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds"
+    "clean": "rd /s /q \"./dist\"",
+    "package:all": "electron-packager . steamaccountswitcher --overwrite --asar --all --prune=true --out=dist --icon=\"./src/resources/icons/Oxygen-Icons.org-Oxygen-Apps-nepomuk-BW.ico\" --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\"",
+    "package:win": "electron-packager . steamaccountswitcher --overwrite --asar --platform=win32 --arch=all --prune=true --out=dist --icon=\"./src/resources/icons/Oxygen-Icons.org-Oxygen-Apps-nepomuk-BW.ico\" --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Steam Account Switcher\""
   },
   "repository": {
     "type": "git",
@@ -22,14 +21,15 @@
   },
   "homepage": "https://github.com/Gantzyo/SteamAccountSwitcher#readme",
   "devDependencies": {
-    "electron": "^1.7.11"
+    "electron": "^1.8.7",
+    "electron-packager": "^12.1.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.3",
-    "@fortawesome/fontawesome-free-solid": "^5.0.6",
-    "bootstrap": "^4.0.0",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "bootstrap": "^4.1.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.12.9",
-    "rage-edit": "^1.0.2"
+    "popper.js": "^1.14.3",
+    "rage-edit": "^1.0.5"
   }
 }
